add build settings to test with unchecked